Fix #33234: Search string crashes Blender

Own regression since image threading safe commit.